Mobile-friendly website and man pages

--- a/web/index.html
+++ b/web/index.html
@@ -1,5 +1,6 @@
 <head>
   <title>uprocd</title>
+  <meta name='viewport' content='width=device-width'>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono">
 
   <style>
@@ -10,6 +11,7 @@
 
     pre {
       margin-top: -1em;
+      overflow-x: auto;
     }
 
     code {
@@ -93,7 +95,7 @@
     <a href="https://github.com/kirbyfan64/uprocd" class="nav-item">GitHub</a>
     <a href="https://github.com/kirbyfan64/uprocd/issues" class="nav-item">Bugs</a>
     <a href="https://discord.gg/UpUQdPD" class="nav-item">Discord</a>
-    <a href="uprocd.index.7.html" class="nav-item">Man pages</a>
+    <a href="uprocd.index.7.html" class="nav-item">man</a>
   </div>
 
   <hr>
