Properly check for Judy

--- a/web/index.html
+++ b/web/index.html
@@ -141,6 +141,7 @@ Time elapsed: 0:00.15
     <li>
       <a href="http://gittup.org/tup/">Tup</a> and
       <a href="https://www.perl.org/">Perl</a> for building.</li>
+    <li><a href="http://judy.sourceforge.net/">Judy arrays</a>.</li>
     <li>
       A <a href="https://www.freedesktop.org/wiki/Software/systemd/">systemd</a>-powered
       Linux system. uprocd itself only spawns daemons for each module and manages
