Update main page

--- a/web/index.html
+++ b/web/index.html
@@ -151,15 +151,13 @@ Time elapsed: 0:00.15
       <a href="http://0pointer.net/blog/the-new-sd-bus-api-of-systemd.html">sd-bus</a>).
       </li>
     <li>
-      <a href="https://www.python.org/">CPython 3</a>. Although uprocd modules can be
-      written for any processes, the only currently included ones are for Python and
-      <a href="https://ipython.org/">IPython</a>. Therefore, if you want to actually be
-      able to try uprocd out, you'll need Python installed.</li>
+      <a href="https://www.python.org/">CPython 3</a> is require if you want to build the
+      Python and <a href="https://ipython.org/">IPython</a> modules for uprocd.</li>
     <li>
-      <a href="https://www.ruby-lang.org/en/">Ruby</a> is required if you want to
-      build the man pages. The tool used to convert the Markdown sources into Roff is
-      <a href="https://rtomayko.github.io/ronn/">Ronn</a>, which is written in
-      Ruby.</li>
+      <a href="https://www.ruby-lang.org/en/">Ruby</a> is required if you want to build
+      the Ruby module or the man pages. (The tool used to convert the Markdown sources
+      into Roff is <a href="https://rtomayko.github.io/ronn/">Ronn</a>, which is written
+      in Ruby.)</li>
   </ul>
 
   <h3 id="building"><a class="clear" href="#building">Downloading and Building</a></h3>
