Remember to install uprocd.h, and a little styling fix for the home page

--- a/web/index.html
+++ b/web/index.html
@@ -81,6 +81,12 @@
       text-transform: uppercase;
       width: 20%;
     }
+
+    @media only screen and (max-width: 768px) {
+      .nav-item {
+        font-size: 14px;
+      }
+    }
   </style>
 </head>
 
