Make sure new Fbuild versions only are used

--- a/web/index.html
+++ b/web/index.html
@@ -152,7 +152,8 @@ Time elapsed: 0:00.11
     <li>A C compiler.</li>
     <li>
       <a href="https://python.org/">Python 3</a> and
-      <a href="https://github.com/felix-lang/fbuild">Fbuild</a> for building.</li>
+      <a href="https://github.com/felix-lang/fbuild">Fbuild</a> 0.3 RC2 or greater for
+      building (just use the <code>master</code> branch).</li>
     <li><a href="http://judy.sourceforge.net/">Judy arrays</a>.</li>
     <li>
       A <a href="https://www.freedesktop.org/wiki/Software/systemd/">systemd</a>-powered
