Move to mrkd from Ronn

--- a/web/index.html
+++ b/web/index.html
@@ -164,14 +164,15 @@ Time elapsed: 0:00.11
       <a href="http://0pointer.net/blog/the-new-sd-bus-api-of-systemd.html">sd-bus</a>).
       </li>
     <li>
+      <b>Optional:</b> <a href="https://github.com/kirbyfan64/mrkd">mrkd</a> if you want
+      to build the man pages.</li>
+    <li>
       <b>Optional:</b> <a href="https://www.python.org/">CPython 3 development files</a>
       if you want to build the Python and <a href="https://ipython.org/">IPython</a>
       modules.</li>
     <li>
       <b>Optional:</b> <a href="https://www.ruby-lang.org/en/">Ruby</a> for building
-      the Ruby module and/or the man pages. (The tool used to convert the Markdown
-      sources into Roff is <a href="https://rtomayko.github.io/ronn/">Ronn</a>, which
-      is written in Ruby.)</li>
+      the Ruby module.</li>
   </ul>
 
   <h3 id="building"><a class="clear" href="#building">Downloading and Building</a></h3>
